@@ -1,3 +1,11 @@
+Tue Oct 22 21:58:28 2013  URABE Shyouhei  <shyouhei@ruby-lang.org>
+
+	* vm_core.h (enum): avoid syntax error.
+
+	* method.h: ditto.
+
+	* internal.h: ditto.
+
 Tue Oct 22 19:53:16 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c (Init_heap): move logics from heap_pages_init() and remove
